fix: adjust position of the minicart empty state checkout box and align elements for the mobile minicart

--- a/minimum-boilerplate-theme/styles/css/header/minicart/vtex.flex-layout.css
+++ b/minimum-boilerplate-theme/styles/css/header/minicart/vtex.flex-layout.css
@@ -1,15 +1,15 @@
 .flexRow--global__minicart-footer {
-    max-width        : 100vw;
-    min-width        : 368px;
+    max-width           : 100vw;
+    min-width           : 368px;
     /* width            : 100%; */
-    height           : 126px;
-    /* margin-left   : 13px; */
-    margin           : auto;
-    border           : 1px solid rgba(231, 231, 231, 1);
-    box-shadow       : none;
-    flex-shrink      : 0;
-    align-content    : center;
-    /* margin-left   : 0.8rem; */
+    height              : 126px;
+    /* margin-left      : 13px; */
+    margin              : auto;
+    border              : 1px solid rgba(231, 231, 231, 1);
+    box-shadow          : none;
+    flex-shrink         : 0;
+    align-content       : center;
+    /* margin-left      : 0.8rem; */
 }
 
 
@@ -48,17 +48,16 @@
     padding-bottom: 1rem;
 }
 
-/* .flexRowContent--desktop__list-row .stretchChildrenWidth,
+.flexRowContent--desktop__list-row .stretchChildrenWidth,
 .flexRowContent--mobile__list-row .stretchChildrenWidth {
     padding-right: 0;
-    width: 100% !important;
-} */
+}
 
 
 .flexColChild--minicart-empty-row-wrapper:first-child {
-    display        : flex;
-    flex-direction : column;
-    justify-content: start;
+    display           : flex;
+    flex-direction    : column;
+    justify-content   : start;
     /* height         : calc(100% - 10rem); */
 }
 
@@ -92,3 +91,21 @@
 /* .flexCol--minicart-empty-row-wrapper {
     height: 90vh;
 } */
+
+/* .flexCol--global__ckeckout__empty-state {
+    height     : 200px;
+} */
+
+@media screen and (max-width: 1025px) {
+    .flexCol--global__ckeckout__empty-state {
+        position   : absolute;
+        /* top     : 21rem; */
+        bottom     : 0px;
+        height     : 200px;
+    }
+
+    .flexRow--global__minicart-footer {
+        min-width: 328px;
+        margin: auto;
+    }
+}
