--- a/minimum-boilerplate-theme/styles/css/home/vtex.my-account.css
+++ b/minimum-boilerplate-theme/styles/css/home/vtex.my-account.css
@@ -1,6 +1,6 @@
 :global(.vtex-slider-layout-0-x-paginationDot--isActive~.vtex-slider-layout-0-x-paginationDot:after) {
     width           : 44px;
-    height          : 2px;
+    height          : 1px;
     content         : "";
     font-size       : 0;
     background-color: rgba(0, 0, 0, .4);
